<resources xmlns:tools="http://schemas.android.com/tools">


    <string name="app_name">Vetoquinol milaveta</string>
    <string name="nav_header_desc">Open navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="menu_home">Accueil</string>
    <string name="menu_presentation">Qui sommes-nous ?</string>
    <string name="menu_product">Produits</string>
    <string name="menu_partner">Partenaire</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_send">Send</string>
    <string name="splash_des">start Screen</string>

    <string name="presentation_noun_title">Qui sommes-nous ?</string>

    <string name="Histoire">Histoire</string>
    <string-array name="string_array_Histoire">
       <item>L\'HISTOIRE DE VETOQUINOL, D\'HIER À AUJOURD\'HUI \n
       Depuis plus de 80 ans, Vetoquinol
       construit son histoire, depuis l\’officine du pharmacien fondateur jusqu’à la
       présence directe dans 23 pays, au service des
       vétérinaires du monde entier.</item>
    </string-array>

    <string name="mission_title">Notre mission</string>
    <string-array name="mission">
       <item>
           Le bien-être des animaux et de l\’homme est le cœur de notre métier.
           Toutes nos équipes, à travers le monde, travaillent dans ce sens.
       </item>
    </string-array>


    <string name="recharche">Recherche et développment</string>
    <string-array name="recharche_info">
       <item>
           Inventif depuis toujours, le Groupe Vetoquinol recherche en permanence des innovations susceptibles de répondre aux besoins quotidiens de ses clients,
           qu\'ils soient vétérinaires, éleveurs ou propriétaires d’animaux de compagnie.
       </item>
    </string-array>


    <string name="chiffres">Chiffres clés</string>
    <string-array name="chiffres_info">
       <item>
       Présent dans le Top 10 des laboratoires pharmaceutiques vétérinaires mondiaux,
       Vetoquinol est un acteur international de référence de la santé animale,
       à destination des animaux de rente
       (bovins) et des animaux de compagnie (chiens, chats).
       </item>
    </string-array>


    <string name="culture">Culture et valeurs</string>
    <string-array name="Culture_info">
       <item>
           Depuis plus de 80 ans, Vetoquinol agit pour la protection et le bien-être des animaux.
           Dans cette optique, nous développons, fabriquons et commercialisons
           des médicaments vétérinaires et des produits non médicamenteux
           dans un souci permanent d\’innovation et de proximité avec nos clients.
       </item>
    </string-array>


    <string name="production">Production</string>
    <string-array name="Production_info">
       <item>
           Chez Vetoquinol, la Direction Industrielle et Qualité est
           particulièrement impliquée dans le programme
           d\’amélioration continue du Groupe.
           Riche de ses équipes, de ses différentes cultures
           , de son organisation et de ses technologies,
           elle met tout en œuvre pour s\’assurer de la qualité irréprochable de nos produits.

       </item>
    </string-array>


    <!-- top image -->
    <string name="title0" />
    <string-array name="item0">
        <item />
    </string-array>


    <string name="google_maps_api_key">AIzaSyCBY5Knsy0p2iJB0PCJkvKoKCxZrTXH598 </string>


    <string-array name="string_array_especes">
        <item>Equins</item>
        <item>Bovins</item>
        <item>Ovins </item>
        <item>Caprins</item>
        <item>Chien</item>
        <item>Chat</item>
        <item>Volailles</item>
        <item>Lapin</item>
    </string-array>

    <string-array name="string_array_thearpeutique">
        <item>Antibiotique</item>
        <item>Antispasmodique </item>
        <item>Douleur-Inflammation</item>
        <item>Diurétique</item>
        <item>Antiparasitaires</item>
        <item>Cardiologie-respiratoire</item>
        <item>Vitamine et Minéraux</item>
        <item>Néonatalogie</item>
    </string-array>

    <string-array name="string_array_Laboratoire">
        <item>Vetoquinol</item>
        <item>Ascor</item>
    </string-array>


    <string name="text_especes">Espèces</string>
    <string name="text_thearpeutique">Classe thérapeutique</string>
    <string name="text_Laboratoire">Laboratoire</string>

    <string name="text_expanded">Expanded</string>
    <string name="text_collapsed">Collapsed</string>


</resources>